# SecreC

./: .gitignore  .gitmodules  HUnit.hs  Main.hs  Makefile  README.md  SecreC.cabal  TODO
examples/: apriori.sc  apriori_bad.sc  apriori_defs.sc  apriori_spec.sc  apriori_spec2.sc  ex1.sc  ex2.sc  ex3.sc  ex4.sc  ex5.sc  ex6.sc  nested_templates.sc  random.sc  random1.sc  sign_x_y.sc  sort.sc  x3p_join.sc
examples/leakage/: count.sc  cut.sc  ewallet.dafny  ewallet.sc  lotsize.sc  median.sc  sign_x_y.sc  sort.sc
examples/leakage/apriori/: README  apriori.sc  apriori_bad.sc  apriori_full.sc  apriori_spec.sc  apriori_spec_full.sc
examples/leakage/beaver/: README  beaver.dfy
examples/leakage/cut/: README  cut.dfy  cut.sc  cut2.sc  cut_imperative.sc  cut_shuffle.sc
examples/leakage/ewallet/: README  ewallet.dfy  ewallet.sc
examples/leakage/gaussian/: README.txt  gaussian.sc
examples/leakage/isort/: README  isort.dfy
examples/leakage/median/: README  median.dfy
examples/leakage/qsort/: README  qsort.sc
examples/leakage/rsort/: README  rsort.sc
imports/: axioms.sc  builtin.sc  prelude.dfy
imports/stdlib/: .gitattributes  .gitignore  .mailmap  CMakeLists.txt
imports/stdlib/docs/: Doxyfile  build_html.sh
imports/stdlib/lib/: matrix.sc  oblivious.sc  profiling.sc  shared2p.sc  shared2p_random.sc  shared3p.sc  shared3p_aes.sc  shared3p_bloom.sc  shared3p_join.sc  shared3p_matrix.sc  shared3p_oblivious.sc  shared3p_random.sc  shared3p_sort.sc  shared3p_statistics_common.sc  shared3p_statistics_distribution.sc  shared3p_statistics_glm.sc  shared3p_statistics_outliers.sc  shared3p_statistics_pca.sc  shared3p_statistics_regression.sc  shared3p_statistics_summary.sc  shared3p_statistics_testing.sc  shared3p_string.sc  shared3p_table_database.sc  stdlib.sc  table_database.sc
imports/stdlib/lib/doc/: arrays.sc  code_structure.sc  control_structures.sc  data_types.sc  expressions.sc  functions.sc  main.sc  modules.sc  operators.sc  structs.sc  templates.sc  types.sc  variables.sc
imports/stdlib/tests/: emulatortestparser.py  runtests-emulator.sh  test_utility.sc  test_utility_random.sc
imports/stdlib/tests/public/: arithmetic_test_scalar.sc  arithmetic_test_vector.sc  comparisons_test_scalars.sc  comparisons_test_vectors.sc  matrix_test.sc  miscellaneous_test.sc  stdlib_test.sc
imports/stdlib/tests/shared3p/: a3p_bloom_test.sc  a3p_comparisons_test_scalars.sc  a3p_comparisons_test_vectors.sc  a3p_matrix_test.sc  a3p_sort_test.sc  additive3pp_test.sc  arithmetic_test_scalar.sc  arithmetic_test_vector.sc  classification_test_scalars.sc  classification_test_vectors.sc  float_addition_precision_test.sc  float_additive3pp.sc  float_arithmetic_scalar.sc  float_arithmetic_vector.sc  float_classification.sc  float_division_precision_test.sc  float_erf.sc  float_erf_precision_test.sc  float_erf_precision_test2.sc  float_exp.sc  float_exp_precision_test.sc  float_exp_precision_test2.sc  float_functions.sc  float_inv.sc  float_inversion_precision_test.sc  float_inversion_precision_test2.sc  float_inversion_precision_test3.sc  float_ln.sc  float_ln_precision_test.sc  float_ln_precision_test2.sc  float_matrix.sc  float_multiplication_precision_test.sc  float_oblivious.sc  float_sin.sc  float_sin_precision_test.sc  float_sin_precision_test2.sc  float_sqrt.sc  float_sqrt_precision_test.sc  float_sqrt_precision_test2.sc  float_stdlib.sc  (+11 more)
src/: Main.hs
src/Language/SecreC/: Error.hs  IO.hs  Location.hs  Modules.hs  Monad.hs  Parser.hs  Position.hs  Pretty.hs  Syntax.hs  TypeChecker.hs  Utils.hs  Vars.hs
src/Language/SecreC/Parser/: Derp.hs  IdLexer.hs  Lexer.x  Parsec.hs  Parser.hs  Parser.y  PreProcessor.hs  Tokens.hs
src/Language/SecreC/Prover/: Base.hs  Expression.hs  SBV.hs  (+4 more)
src/Text/: Derp.hs
src/Text/Derp/: Combinator.hs
tests/: Tests.hs
tests/regression/arrays/: 00-trivia-const.sc  00-trivia.sc  01-size.sc  02-expression.sc  03-index.sc  04-slice.sc  05-simplicit.sc  06-functions.sc  07-dynamic-size.sc  08-rec.sc  09-reshape-fail.sc  09-reshape.sc  10-shape.sc  11-shape-change.sc  12-big-expr.sc  13-index-assing.sc  14-index-assing-slice.sc  15-index-assing-slice-2d.sc  16-scalar-reshape.sc  17-assign-op-index.sc  18-nat.sc  19-fibo.sc  20-order.sc  21-reshape-bug.sc  22-ternary-bug.sc  23-assign-bug.sc  24-ternary.sc  25-uops.sc  26-classify.sc  27-assign-op.sc  28-primes.sc  29-slice-suggar.sc  30-concat.sc  31-concat-2d.sc  32-slice-order.sc  33-concat-suggar.sc  34-reshape-classify.sc  35-cat-bug.sc  36-slice-empty-dim.sc  37-cat-empty.sc  (+16 more)
tests/regression/dependent/: 00-invariant-const.sc  01-2-consts.sc  02-recursive.sc
tests/regression/scalars/: 00-trivial.sc  01-true.sc  02-decl.sc  03-scope.sc  04-function.sc  05-assert-fail.sc  05-declassify.sc  06-rec.sc  07-while.sc  08-func-ret.sc  09-global.sc  10-if.sc  11-empty-if.sc  12-return.sc  13-loop-bench.sc  14-expressions.sc  15-continue.sc  16-break.sc  17-for.sc  18-for-empty-body.sc  19-logic-public.sc  20-logic-bug1.sc  21-logic-private.sc  22-ternary.sc  23-uops-public.sc  24-uops-private.sc  25-assignops.sc  26-do-while.sc  27-do-while-bug.sc  28-scope-bug.sc  29-scope-bug-2.sc  30-rec-bug.sc  31-fib.sc  32-overloading.sc  33-string.sc  34-print.sc  35-prefix-incdec.sc  36-postfix-incdec.sc  37-for-decl.sc  38-postfix-fail.sc  (+19 more)
tests/regression/structs/: 00-simple-declaration.sc  01-simple-definition.sc  02-set-get.sc  03-template.sc  04-redeclaration.sc  05-trivial-get.sc  06-return-struct.sc  07-param-struct.sc  08-double-free-bug.sc  09-inc-dec.sc  10-nested-template.sc  11-template-domain-failure.sc  12-template-argument.sc  13-some.sc  14-assign-bug.sc  15-recursive.sc  16-recursive-template.sc
tests/regression/templates/: 00-trivial.sc  01-recursion.sc  02-kind-fail.sc  03-kind.sc  04-multiparam.sc  05-multiparam-fail.sc  06-instantiation-fail.sc  07-strange-bug.sc  08-mutual-recursion.sc  09-recursive-call-of-different-instance.sc  10-overloading.sc  11-name-lookup.sc  12-return-type-overloading.sc  13-various.sc  14-ambiguous-lookup.sc  15-unify-fail-bug.sc  16-is-scalar.sc  17-simple.sc
(+23 files in other folders)
